--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,10 @@
     "es6": true
   },
   "extends": ["eslint:recommended", "plugin:prettier/recommended"],
-  "plugins": ["babel"],
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+  "parser": "@babel/eslint-parser",
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
     }
   }
 }
