--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@babel/polyfill": "^7.12.1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "5.2.1",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -27,6 +27,7 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
+    "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
