--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "a11y-dialog": "^5.4.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
+    "mapbox-gl": "^1.12.0",
     "webpack": "^4.42.2"
   },
   "devDependencies": {
