--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "mapbox-gl": "^1.12.0",
+    "typescript": "^4.0.5",
     "webpack": "^4.42.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
