--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/mapbox-gl": "^1.12.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "dotenv": "^8.2.0",
