--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
     "a11y-dialog": "^5.4.2",
     "bootstrap": "^4.4.1",
