--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^8.2.0",
     "mapbox-gl": "^1.12.0",
     "typescript": "^4.0.5",
-    "webpack": "^4.42.2"
+    "webpack": "^4.42.2",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -42,7 +43,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
